<resources>
    <string name="app_name">KotlinLogin</string>
    <string name="log_in">Login</string>
    <string name="password">Password</string>
    <string name="username">Utilizador</string>
    <string name="contact">Contacto</string>
    <string name="qualifications">Qualificações</string>
    <string name="email">Email</string>
    <string name="or">OU CONECTAR COM</string>
    <string name="sign_in">Entrar</string>
    <string name="sign_up">Registar</string>
    <string name="create_acc">Não és membro?</string>
    <string name="botao_create_acc">Criar Conta </string>
    <string name="botao_cancel">Cancelar</string>
    <string name="botao_register">Registar</string>
    <string name="fb_login_protocol_scheme">fb526498191468722</string>
    <string name="botao_forgot_password">Esqueceste a Password? </string>
    <string name="Verify_email">Verificar E-mail </string>
    <string name="botao_verify">Verificar </string>
    <string name="botao_confirm">Confirmar</string>
    <string name="password_changed">A password foi corretamenta alterada </string>
    <string name="welcome">Bem vindo! </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email</string>
    <string name="nome_de_utilizador">Nome de Utilizador</string>
    <string name="contacto">Contacto</string>
    <string name="contacto_telef_nico">Contacto telefónico</string>
    <string name="qualifica_es">Qualificações</string>
    <string name="qualifica_es2">Qualificações</string>
    <string name="email2">Email</string>
    <string name="perfil">Perfil</string>
    <string-array name="tipo_options">
        <item>generico</item>
        <item>software</item>
        <item>consultoria</item>
        <item>redes</item>
        <item>financiero</item>
    </string-array>
    <string-array name="tipotp_options">
        <item>Desenvolvimento WEB</item>
        <item>Desenvolvimento Mobile</item>
        <item>Consultoria</item>
    </string-array>
    <string-array name="tipo_estado">
        <item>Não Ativo</item>
        <item>Ativo/Criado</item>
        <item>Em Curso</item>
        <item>Em Standby</item>
        <item>Em Proposta</item>
        <item>Em Análise</item>
        <item>Em Negociacao</item>
        <item>Fechado/Perdido</item>
        <item>Concluído</item>
        <item>Arquivado</item>
        <item>Eliminado</item>
    </string-array>
    <string name="qualifica">Qualificações</string>
    <string name="todo">TODO</string>
    <string name="utilizador">Utilizador</string>
    <string name="save">Save</string>
    <string name="importer_cv">Importer CV</string>
    <string name="importar_cv">Importar CV</string>
    <string name="importar">Importar</string>
    <string name="estado">Estado</string>
    <string name="estado_da_ideia">Estado da Ideia</string>
    <string name="descri_o_da_ideia">Descrição da Ideia</string>
    <string name="descri_o">Descrição</string>
    <string name="assunto_da_ideia">Assunto da Ideia</string>
    <string name="assunto">Assunto</string>
    <string name="editar_ideias">Editar Ideias</string>
    <string name="notifica_o_1">Notificação 1</string>
    <string name="notificacoes">Notificacoes</string>
    <string name="calendario">Calendário</string>
    <string name="clientes">Clientes</string>
    <string name="d"><![CDATA[<-]]></string>
    <string name="oportunidades">Oportunidades</string>
    <string name="listaoportunidades">Lista de Oportunidades</string>
    <string name="botao_criar_op_id">Criar</string>
    <string name="content_op_id">ID  Subject</string>
    <string name="criarop">Criar Oportunidades</string>
    <string name="listaop">Lista de Oportunidades</string>
    <string name="botao_guardar">Guardar</string>
    <string name="beneficios">Benefícios</string>
    <string name="listabeneficios">Lista de Benefícios</string>
    <string name="quantidade">Quantidade</string>
    <string name="detalhes">Detalhes</string>
    <string name="phone_number">Phone Number</string>
    <string name="atualizar">Atualizar</string>
    <string name="listavagas">Lista de Vagas\n</string>
    <string name="vagas">Vagas</string>
    <string name="apply">Apply</string>
    <string name="view_options_prompt">Select View</string>
    <string name="dia">Dia</string>
    <string name="semana">Semana</string>
    <string name="m_s">Mês</string>
    <string name="facebook_app_id">1451984212300767</string>
    <string name="minhas_notifica_es">Minhas Notificações</string>
    <string name="contactos">contactos</string>
    <string name="notas">notas</string>
    <string name="Orcamento">Orçamento</string>
    <string name="entrevistas_t_cnicas">Entrevistas Técnicas</string>
    <string name="internet_status">Internet Status</string>
    <string name="atualizar1">Atualizar</string>
    <string name="voltar">Voltar</string>
    <string-array name="view_options">
        <item>Dia</item>
        <item>Semana</item>
        <item>Mês</item>
    </string-array>
    <string name="title_activity_criar_clientes">CriarClientes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>
