<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_dashboard_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/baseline_people_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_ideias"
            android:icon="@drawable/baseline_lightbulb_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_oportunidades"
            android:icon="@drawable/baseline_lightbulb_24"
            android:title="Oportunidades" />
        <item
            android:id="@+id/nav_contactos"
            android:icon="@drawable/baseline_lightbulb_24"
            android:title="Contactos" />
        <item
            android:id="@+id/nav_vagas"
            android:icon="@drawable/baseline_lightbulb_24"
            android:title="Vagas" />
        <item
            android:id="@+id/nav_beneficios"
            android:icon="@drawable/baseline_lightbulb_24"
            android:title="Beneficios" />
        <item
            android:id="@+id/nav_calendario"
            android:icon="@drawable/baseline_lightbulb_24"
            android:title="Calendario" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_lightbulb_24"
            android:title="Log Out" />
    </group>
</menu>