<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sft4all.EntrevistasTecnicas">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/frameLayout"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btn_open_menu"
                android:layout_width="46dp"
                android:layout_height="37dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/baseline_density_small_24"
                android:onClick="openMenu" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/rectangle1" />

            <ImageView
                android:id="@+id/internet_status"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="340dp"
                android:layout_marginTop="13dp"
                android:src="@drawable/baseline_wifi_off_24"
                android:contentDescription="@string/internet_status" />

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="11dp"
                android:text="@string/entrevistas_t_cnicas"
                android:textColor="@android:color/white"
                android:textSize="23sp"
                android:textStyle="bold" />
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="53dp">

            <Button
                android:id="@+id/btnCriar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="100dp"
                android:paddingBottom="5dp"
                android:text="@string/voltar" />

            <Button
                android:id="@+id/btnAtualiza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="230dp"
                android:drawableLeft="@drawable/baseline_refresh_24"
                android:paddingBottom="5dp"
                android:text="@string/atualizar1"
                />


            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="96dp"
                 />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/bottom_nav" />
    <com.google.android.material.navigation.NavigationView
        app:theme="@style/ActionButton"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true" />

</androidx.drawerlayout.widget.DrawerLayout>