<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:theme="@style/AppTheme"
    android:background="@mipmap/login_1_foreground"
    tools:context="com.sft4all.MainActivity">

    <FrameLayout
        android:id="@+id/loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:background="@color/loading_overlay_color"
        android:clickable="true"
        android:elevation="3dp"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

    <View
        android:id="@+id/view"
        android:layout_width="307dp"
        android:layout_height="507dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="133dp"
        android:layout_height="107dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@mipmap/soft_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="107dp"
        android:layout_height="44dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/sign_in"
        android:textColor="@color/background_color"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/signin_custom_input"
        android:hint="@string/username"
        android:imeOptions="actionNext|flagNoFullscreen"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:textColor="@color/background_color"
        android:textColorHint="@color/background_color"
        android:textSize="20sp"
        android:drawableStart="@drawable/custom_person_ic"
        android:drawablePadding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/signin_custom_input"
        android:hint="@string/password"
        android:imeOptions="actionDone|flagNoFullscreen"
        android:inputType="textPassword|textNoSuggestions"
        android:textColor="@color/background_color"
        android:textColorHint="@color/background_color"
        android:textSize="20sp"
        android:drawableStart="@drawable/custum_lock_ic"
        android:drawablePadding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />


    <Button
        android:id="@+id/forgotps"
        android:layout_width="187dp"
        android:layout_height="19dp"
        android:layout_centerInParent="true"
        android:background="#1F1F20"
        android:text="@string/botao_forgot_password"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/loginError"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="0dp"
        android:maxLines="3"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textColor="#B00020"
        android:textStyle="bold"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/rememberMeCheckbox"
        android:layout_width="175dp"
        android:layout_height="29dp"
        android:layout_marginStart="-90dp"
        android:text="Guardar credenciais"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotps" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="173dp"
        android:layout_height="46dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_border2"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/background_color_reverse"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rememberMeCheckbox" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:text="@string/or"
        android:textColor="@color/background_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <View
        android:id="@+id/view1"
        android:layout_width="73dp"
        android:layout_height="3dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <View
        android:id="@+id/view2"
        android:layout_width="73dp"
        android:layout_height="3dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <Button
        android:id="@+id/btLoginFacebook"
        android:layout_width="110dp"
        android:layout_height="52dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/facebook_button"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOr"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleButton"
        android:layout_width="114dp"
        android:layout_height="57dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="28dp"
        app:buttonSize="icon_only"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toEndOf="@+id/btLoginFacebook"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="8dp"
        android:text="@string/create_acc"
        android:textColor="@color/background_color"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/createacc"
        android:layout_width="60dp"
        android:layout_height="19dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="232dp"
        android:layout_marginTop="8dp"
        android:background="#1F1F20"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>