<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_1_foreground"
    tools:context="com.sft4all.SignUP">

    <FrameLayout
        android:id="@+id/loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:background="@color/loading_overlay_color"
        android:clickable="true"
        android:elevation="3dp"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

    <View
        android:id="@+id/view"
        android:layout_width="286dp"
        android:layout_height="469dp"
        android:layout_marginTop="-150dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="107dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="-20dp"
        android:background="@mipmap/soft_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/suUsername"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/signin_custom_input"
        android:drawableStart="@drawable/custom_person_ic"
        android:drawablePadding="12dp"
        android:ems="10"
        android:textSize="18sp"
        android:hint="Nome"
        android:inputType="textPersonName"
        android:textColor="@color/background_color"
        android:textColorHint="@color/background_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/suEmail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/signin_custom_input"
        android:drawableStart="@drawable/custom_email_ic"
        android:drawablePadding="12dp"
        android:textSize="18sp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/background_color"
        android:textColorHint="@color/background_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suUsername" />

    <EditText
        android:id="@+id/suPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        android:background="@drawable/signin_custom_input"
        android:drawableStart="@drawable/custum_lock_ic"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/background_color"
        android:textColorHint="@color/background_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suEmail" />

    <EditText
        android:id="@+id/suPassword2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/signin_custom_input"
        android:drawableStart="@drawable/custum_lock_ic"
        android:textSize="18sp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="Confirmar Pass"
        android:inputType="textPassword"
        android:textColor="@color/background_color"
        android:textColorHint="@color/background_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suPassword" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:textColor="#FF0000"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suPassword2" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="120dp"
        android:layout_height="43dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_border2"
        android:text="@string/botao_cancel"
        android:textAllCaps="false"
        android:textColor="@color/background_color_reverse"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suPassword2" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="120dp"
        android:layout_height="43dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_border2"
        android:text="@string/botao_register"
        android:textAllCaps="false"
        android:textColor="@color/background_color_reverse"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@+id/suPassword2" />




    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/background_color"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>